--- a/packages/map-core/Map.stories.mdx
+++ b/packages/map-core/Map.stories.mdx
@@ -705,6 +705,7 @@ The Geolocation control is used here to display a point when the position is acc
             :features="features"
             dataFormat="GeoJSON"
             loadingStrategy="bbox"
+            :layerStyle="geolocationStyle"
             :visible="geolocationAccuracy && accuracyCheck()"
           />
         </myvic-map-core>`,
@@ -715,7 +716,8 @@ The Geolocation control is used here to display a point when the position is acc
             zoom: 11,
             features: [ new ol.Feature() ],
             geolocationPosition: null,
-            geolocationAccuracy: null
+            geolocationAccuracy: null,
+            geolocationStyle: styles.defaultGeolocationStyle
           }
         },
         methods: {
