--- a/packages/map-core/Map.stories.mdx
+++ b/packages/map-core/Map.stories.mdx
@@ -531,9 +531,12 @@ top-right to avoid hiding it with the popup.
           selectedStyleFunction: function (feature) {
             return this.pointStyles[feature.get('pinType')].selectedLarge
           },
-          onSelect: function (features) {
+          onSelect: function (features, evt) {
+            const pixel = evt.mapBrowserEvent.pixel
+            // to center pin next to the popup move the center of the map half the popup width to the left
+            const shiftedPixel = [pixel[0] - 150, pixel[1]]
             if (features.getLength() > 0) {
-              this.center = features.getArray()[0].get('geometry').flatCoordinates
+              this.center = evt.mapBrowserEvent.map.getCoordinateFromPixel(shiftedPixel)
             }
           },
           generatePopupContent: function (features) {
