make cluster color and label limit configurable

--- a/packages/map-core/MapVectorLayer.stories.mdx
+++ b/packages/map-core/MapVectorLayer.stories.mdx
@@ -299,7 +299,7 @@ This example showcases clusters that break up when interacted with
           },
           clusterPointStyle: function (features) {
             return [ol.createImageIconStyle(
-              styles.filledCluster(features),
+              styles.filledCluster(features, '#53565A', 999),
               'anonymous'
             )]
           },
