cache cluster image icons in vector layer

--- a/packages/map-core/MapVectorLayer.stories.mdx
+++ b/packages/map-core/MapVectorLayer.stories.mdx
@@ -277,6 +277,7 @@ This example showcases clusters that break up when interacted with
             :layerStyle="getLayerStyle"
             :clustering="true"
             :clusterPointStyle="clusterPointStyle"
+            :declutter="false"
             :enablePopup="true"
           />
         </myvic-map-core>`,
