change to new vicmap cartographic basemap

--- a/packages/map-core/MapTileLayer.stories.mdx
+++ b/packages/map-core/MapTileLayer.stories.mdx
@@ -251,8 +251,8 @@ This example provides options to test different layer configurations.
             <myvic-map-tile-layer
               type="WMS"
               url="https://base.maps.vic.gov.au/service"
-              :params="{'LAYERS': 'CARTO_WM', 'TILED': true}"
-              :tileSize="[512, 512]"
+              :params="{'LAYERS': 'CARTO_WM_256', 'TILED': true}"
+              :tileSize="[256, 256]"
               :highDPI="false"
             />
           </myvic-map-core>
