--- a/packages/map-core/Map.stories.mdx
+++ b/packages/map-core/Map.stories.mdx
@@ -492,8 +492,8 @@ top-right to avoid hiding it with the popup.
             <myvic-map-tile-layer
               type="WMS"
               url="https://base.maps.vic.gov.au/service"
-              :params="{'LAYERS': 'CARTO_WM', 'TILED': true}"
-              :tileSize="[512, 512]"
+              :params="{'LAYERS': 'CARTO_WM_256', 'TILED': true}"
+              :tileSize="[256, 256]"
               :highDPI="false"
             />
             <myvic-map-vector-layer
@@ -574,8 +574,8 @@ The ```position``` property of the ```popupProps``` prop is set to ```below-feat
             <myvic-map-tile-layer
               type="WMS"
               url="https://base.maps.vic.gov.au/service"
-              :params="{'LAYERS': 'CARTO_WM', 'TILED': true}"
-              :tileSize="[512, 512]"
+              :params="{'LAYERS': 'CARTO_WM_256', 'TILED': true}"
+              :tileSize="[256, 256]"
               :highDPI="false"
             />
             <myvic-map-vector-layer
