--- a/packages/map-core/MapVectorLayer.stories.mdx
+++ b/packages/map-core/MapVectorLayer.stories.mdx
@@ -220,6 +220,7 @@ This example showcases client-side clustering with a GeoJSON file loaded from a 
           :zoom="14"
           :baseMapUrl="baseMapUrl"
           :popupContentFunction="generatePopupContent"
+          :popupProps="popupProps"
         >
           <myvic-map-vector-layer
             :urlFunction="buildUrl"
@@ -234,6 +235,9 @@ This example showcases client-side clustering with a GeoJSON file loaded from a 
             containerStyle: { position: 'relative', width: '100%', height:'100vh' },
             center: [16136905.843820328, -4553057.013522999],
             baseMapUrl: 'https://api.mapbox.com/styles/v1/myvictoira/cjio5h4do0g412smmef4qpsq5/tiles/256/{z}/{x}/{y}?access_token=pk.eyJ1IjoibXl2aWN0b2lyYSIsImEiOiJjamlvMDgxbnIwNGwwM2t0OWh3ZDJhMGo5In0.w_xKPPd39cwrS1F4_yy39g',
+            popupProps: {
+              preferredWidth: 350
+            }
           }
         },
         methods: {
