add more options to the AreaSearch component

--- a/packages/AreaSearch/AreaSearch.stories.mdx
+++ b/packages/AreaSearch/AreaSearch.stories.mdx
@@ -43,6 +43,9 @@ import { AreaSearch } from '@dpc-sdp/myvic-areasearch'
         props: {
           noLgaOrRegion: {
             default: () => false
+          },
+          showSecondaryText: {
+            default: () => true
           }
         }
       }
@@ -61,6 +64,9 @@ import { AreaSearch } from '@dpc-sdp/myvic-areasearch'
         props: {
           noLgaOrRegion: {
             default: () => true
+          },
+          showSecondaryText: {
+            default: () => false
           }
         }
       }
