replace geojson example data (countries) with static file

--- a/packages/map-core/Map.stories.mdx
+++ b/packages/map-core/Map.stories.mdx
@@ -261,7 +261,7 @@ selected feature by passing a style or style function to the map through ```sele
           :selectedFeatureStyle="selectedStyleFunction"
         >
           <myvic-map-vector-layer
-            url="https://openlayers.org/en/latest/examples/data/geojson/countries.geojson"
+            url="countries.geojson"
             dataFormat="GeoJSON"
             labelAttribute="name"
           />
@@ -651,7 +651,7 @@ The ```position``` property of the ```popupProps``` prop is set to ```below-feat
                   @click="onClick"
                 >
                   <myvic-map-vector-layer
-                    url="https://openlayers.org/en/latest/examples/data/geojson/countries.geojson"
+                    url="countries.geojson"
                     dataFormat="GeoJSON"
                     labelAttribute="name"
                   />
