--- a/packages/map-core/MapTileLayer.stories.mdx
+++ b/packages/map-core/MapTileLayer.stories.mdx
@@ -83,13 +83,13 @@ This example provides options to test different layer configurations.
         </myvic-map-core>`,
         props: {
           layerType: {
-            default: select('Type', { OSM: 'OSM', XYZ: 'XYZ', WMS: 'WMS', ArcGIS: 'ArcGIS' }, 'WMS', 'layer')
+            default: select('Type', { OSM: 'OSM', XYZ: 'XYZ', WMS: 'WMS', ArcGIS: 'ArcGIS' }, 'ArcGIS', 'layer')
           },
           layerUrl: {
-            default: text('URL', 'http://gaservices.ga.gov.au/site_7/services/Topographic_Base_Map_WM/MapServer/WMSServer', 'layer')
+            default: text('URL', 'http://gaservices.ga.gov.au/site_7/rest/services/NATMAP_Digital_Maps_250K_2008Edition_WM/MapServer', 'layer')
           },
           layerParams: {
-            default: () => object('Params', {'LAYERS': 'Bathymetry,Australian_Mainland,Hillshade_3_second', 'TILED': true}, 'layer')
+            default: () => object('Params', {'LAYERS': 'Australia_Mosaic_250k', 'TILED': true}, 'layer')
           },
           layerProjection: {
             default: () => text('Projection', '', 'layer')
@@ -331,9 +331,9 @@ This example provides options to test different layer configurations.
   </Story>
 </Preview>
 
-## WMS - GDA94 Projection
+## WMS - GDA94 Projection - no longer seems to work for EPSG:4283
 
-<Preview>
+<!-- <Preview>
   <Story name="WMS - GDA94 Projection">
     {
       {
@@ -342,32 +342,34 @@ This example provides options to test different layer configurations.
           <myvic-map-core
             :containerStyle="containerStyle"
             :center="center"
-            :zoom="3"
-            :projection="projection"
+            :projection="viewProjection"
           >
             <myvic-map-tile-layer
               type="WMS"
-              url="http://services.ga.gov.au/gis/services/Bathymetry_Topography/MapServer/WMSServer"
-              :params="{'LAYERS': 'Australian_Bathymetry_and_Topography'}"
-              :projection="projection"
+              url="https://gis-app-cdn.prod.myvictoria.vic.gov.au/geoserver/myvic/wms"
+              :params="{'LAYERS': 'myvic:lga', 'TILED': true}"
+              :projection="tileProjection"
             />
           </myvic-map-core>
         `,
         data: () => {
           return {
             containerStyle: { position: 'relative', width: '100%', height:'100vh' },
-            center: [144, -37]
+            center: [16138405.843820328, -4552817.013522999]
           }
         },
         props: {
-          projection: {
-            default: "EPSG:4283"
+          viewProjection: {
+            default: "EPSG:3857"
+          },
+          tileProjection: {
+            default: "EPSG:4283" // works for "EPSG:4326" though
           }
         }
       }
     }
   </Story>
-</Preview>
+</Preview> -->
 
 ## ArcGIS - MapShare
 
